--- a/core/streams/Readme
+++ b/core/streams/Readme
@@ -11,3 +11,5 @@ Press 2 19200
 Press 3 38400
 Press 4 57600
 Press 5 115200
+
+Doing a controller hard reset we think reset the baudrate to 57600???
