updated loader to enable execute button.  added basis for command_interpreter awaiting info from Starbase Dev for how stepped commands work.

--- a/interpreter/Readme
+++ b/interpreter/Readme
@@ -1,2 +1,4 @@
 Core module defines the methods used by the commands.
 
+the interpreter need to needs to have access to the loader object to write status messages as well as access to the
+instrument object so we have access to the instrument dictionary.
