completed staribus_command/response_message classes, processor completed for Staribus, Starinet to be done.

--- a/dao/Readme
+++ b/dao/Readme
@@ -13,3 +13,7 @@ Press 4 57600
 Press 5 115200
 
 Doing a controller hard reset we think reset the baudrate to 57600???
+
+--------------
+
+Remember to add logger bits.
