Updated dao readme, and loader with temp final execute. Safety commit and push.

--- a/dao/Readme
+++ b/dao/Readme
@@ -16,4 +16,4 @@ Doing a controller hard reset we think reset the baudrate to 57600???
 
 --------------
 
-Remember to add logger bits.
+Probably still need to update docstrings. ;-))
