--- a/dao/Readme
+++ b/dao/Readme
@@ -12,7 +12,7 @@ Press 3 38400
 Press 4 57600
 Press 5 115200
 
-Doing a controller hard reset we think reset the baudrate to 57600???
+Doing a controller hard reset we think resets the baudrate to 57600???
 
 --------------
 
