--- a/interpreter/Readme
+++ b/interpreter/Readme
@@ -2,3 +2,8 @@ Core module defines the methods used by the commands.
 
 the interpreter need to needs to have access to the loader object to write status messages as well as access to the
 instrument object so we have access to the instrument dictionary.
+
+Some assumptions are made like  the following,
+
+1.) getData name , Command base and Command Code aren't changed.
+2.) getDataBlockCount and getDataBlock Command base and Command Code aren't changed.
