--- a/datatranslators/Readme
+++ b/datatranslators/Readme
@@ -1,5 +1,5 @@
 The data translator decipher the payload into channel data.  If you write a new translator you'll also need to create
-a new metadata creator.
+a new metadata creator.  Also add the translator name to configuration_regex.
 
 Things to aware of :
 
