--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -73,6 +73,8 @@ Update - On startup if the data save path isn't set you'll be asked to set.
 
 Update - Added release note dialog.
 
+Update - Added menu item tools - filters - Non Linear Static Remover.
+
 ===============
 Version : 2.0.3
 ===============
