Moved all routines specific to StaribusBlocks to datatranslator.  Parameter background not set to default background colour.  Updated Bugs and readme's.

--- a/datatranslators/Readme
+++ b/datatranslators/Readme
@@ -1,2 +1,4 @@
 The data translator decipher the payload into channel data.  If you write a new translator you'll also need to create
 a new metadata creator.  Also add the translator name to configuration_regex.
+
+To add a new Translator
