--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -3,7 +3,7 @@ Version : 3.0.1
 
 Fixed - Starinet 6 Beagle Logger, incorrect instrument identifier and description corrected.
 
-Fixed - Issue where instrument identifier and not description was being used for chart title.
+Fixed - Issue where instrument identifier not instrument description was used for chart title.
 
 Fixed - Font size issue with ReleaseNotes and Metadata for Windows and Linux reduced font to 10pt.
 
