--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -13,7 +13,7 @@ Fixed - Issue where parameter entry box when disabled wasn't the same colour as 
 
 Fixed - Issue where instrument attributes line edit weren't set the default background colour.
 
-Fixed - Moved all StaribusBlock specific routines to it's own module under datatranslator.
+Fixed - Moved all StaribusBlock specific routines to there own module under datatranslator.
 
 Fixed - Issue where selected instrument wasn't indicated as initialised or changed in status window.
 
